--- a/css/styles.css
+++ b/css/styles.css
@@ -456,7 +456,7 @@ h2 {
 }
 
 /* Project link general */
-.project-link a {
+.project-link .github, .project-link .demo {
   transition: ease-in-out 0.2s;
   margin: 0 10px 0 10px;
 
@@ -466,16 +466,16 @@ h2 {
 }
 
 /* Hover on GitHub link */
-.project-link a:nth-child(1):hover {
+.project-link .github:hover {
   filter: drop-shadow(0 0 5px #505050);
 }
 
 /* Hover on Demo link */
-.project-link a:nth-child(2):hover {
+.project-link .demo:hover {
   filter: drop-shadow(0 0 5px #3f4974);
 }
 
-.project-link a:after {
+.project-link .github:after, .project-link .demo::after {
   font-size: 0rem;
 
   position: relative;
@@ -488,24 +488,24 @@ h2 {
   transform-origin: left;
 }
 
-.project-link a:nth-child(1)::after {
-  content: "Github";
+.project-link .github::after {
+  content: "GitHub";
 }
 
-.project-link a:nth-child(2)::after {
+.project-link .demo::after {
   content: "Demo";
 }
 
 /* Github link at hover */
-.project-link a:nth-child(1):hover::after {
-  content: "Github";
+.project-link .github:hover::after {
+  content: "GitHub";
   font-size: 1.5rem;
   opacity: 1;
   transform: scale(1);
 }
 
 /* Demo link at hover */
-.project-link a:nth-child(2):hover::after {
+.project-link .demo:hover::after {
   content: "Demo";
   font-size: 1.5rem;
   opacity: 1;
