--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@
 * {
   margin: 0;
   padding: 0;
-
-  scroll-behavior: smooth;
+  
+  scroll-behavior: smooth;  
 }
 
 body {
@@ -52,7 +52,7 @@ hr {
 
 /* Scrollbar  Track */
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: #ffffff;
   /* margin: 20px auto; */
 }
 
@@ -67,6 +67,78 @@ hr {
   background: #3f4974;
 }
 
+/* ? ==================== PRELAODER ==================== */
+#preloader {
+  background: linear-gradient(260deg,#182639,#111823,#0d1017);
+  background-size: 180% 180%;
+  animation: gradient-animation 6s ease infinite;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  -webkit-animation: gradient-animation 6s ease infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+body.no-scroll {
+  overflow: hidden;
+}
+
+.custom-loader {
+  width:120px;
+  height:32px;
+  display: grid;
+  color: #3f4974;
+}
+
+.custom-loader:before,
+.custom-loader:after {
+  content: "";
+  grid-area: 1/1;
+  --c: linear-gradient(currentColor 0 0);
+  background: var(--c), var(--c), var(--c);
+  background-repeat: no-repeat;
+  animation: l6-1 3s infinite linear, l6-2 3s infinite linear;
+  transform: scale(var(--s,1)) translate(6px,-6px);
+}
+.custom-loader:after {
+  --s:-1;
+}
+
+@keyframes l6-1 {
+  0%,
+  3%    {background-size: 0    8px,8px 0   ,0    8px}
+  16.67%{background-size: 100% 8px,8px 0   ,0    8px}
+  33.33%{background-size: 100% 8px,8px 100%,0    8px}
+  46%,
+  54%   {background-size: 100% 8px,8px 100%,100% 8px}
+  66.67%{background-size: 0    8px,8px 100%,100% 8px}
+  83.33%{background-size: 0    8px,8px 0   ,100% 8px}
+  96%,
+  100%  {background-size: 0    8px,8px 0   ,0    8px}
+}
+
+@keyframes l6-2 {
+  0%,49.9%{background-position: 0    0,100% 0   ,100% 100%}
+  50%,100%{background-position: 100% 0,100% 100%,0    100%}
+}
+
 /* ? ==================== NAVBAR ==================== */
 .navbar {
   display: flex;
@@ -77,7 +149,7 @@ hr {
   transition: ease-in-out 0.2s;
 
   position: fixed;
-  width: 100%;
+  width: 100vw;
   z-index: 99;
 
   /* effects */
@@ -126,6 +198,8 @@ hr {
   transition: ease-in-out 0.2s;
   display: inline-block;
   position: relative;
+
+  cursor: pointer;
 }
 
 .list li::before {
