--- a/css/styles.css
+++ b/css/styles.css
@@ -122,21 +122,50 @@ body.no-scroll {
 }
 
 @keyframes l6-1 {
+
   0%,
-  3%    {background-size: 0    8px,8px 0   ,0    8px}
-  16.67%{background-size: 100% 8px,8px 0   ,0    8px}
-  33.33%{background-size: 100% 8px,8px 100%,0    8px}
+  3% {
+    background-size: 0 8px, 8px 0, 0 8px
+  }
+
+  16.67% {
+    background-size: 100% 8px, 8px 0, 0 8px
+  }
+
+  33.33% {
+    background-size: 100% 8px, 8px 100%, 0 8px
+  }
+
   46%,
-  54%   {background-size: 100% 8px,8px 100%,100% 8px}
-  66.67%{background-size: 0    8px,8px 100%,100% 8px}
-  83.33%{background-size: 0    8px,8px 0   ,100% 8px}
+  54% {
+    background-size: 100% 8px, 8px 100%, 100% 8px
+  }
+
+  66.67% {
+    background-size: 0 8px, 8px 100%, 100% 8px
+  }
+
+  83.33% {
+    background-size: 0 8px, 8px 0, 100% 8px
+  }
+
   96%,
-  100%  {background-size: 0    8px,8px 0   ,0    8px}
+  100% {
+    background-size: 0 8px, 8px 0, 0 8px
+  }
 }
 
 @keyframes l6-2 {
-  0%,49.9%{background-position: 0    0,100% 0   ,100% 100%}
-  50%,100%{background-position: 100% 0,100% 100%,0    100%}
+
+  0%,
+  49.9% {
+    background-position: 0 0, 100% 0, 100% 100%
+  }
+
+  50%,
+  100% {
+    background-position: 100% 0, 100% 100%, 0 100%
+  }
 }
 
 /* ? ==================== NAVBAR ==================== */
@@ -877,21 +906,7 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 7px;
-}
-
-.copyright p:nth-child(1) {
-  text-decoration: none;
-  position: relative;
-}
-
-.copyright p:nth-child(1)::after {
-  content: "";
-
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -8px;
-  border: 1px solid #e5e5dc;
+  text-align: center;
 }
 
 .copyright .myname {
@@ -1011,26 +1026,29 @@ footer {
 @media only screen and (max-width: 768px) {
   /* ? ==================== GENERAL ==================== */
 
-  /* ? ==================== NAVBAR ==================== */
-
-  .navbar:has(#toggler:checked) {
-    height: 310px;
-    box-shadow: 5px 5px 15px #00000080;
-  }
-
-  .navbar {
-    height: 70px;
-    width: 100%;
-    padding-bottom: 10px;
-  }
+  /* ? ==================== NAVBAR ==================== */  
 
   .menu {
-    transform: scaleY(0);
-    transform-origin: top;
     overflow: hidden;
-    transition: ease-in-out 0.2s;
+    max-height: 0;
+    transition: max-height .2s ease-in-out;
     width: 100%;
   }
+
+  .menu-content {
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform .2s ease-in-out;
+    padding: 20px;
+  }
+  
+  #toggler:checked ~ .menu {
+    max-height: 100vh;
+  }
+  
+  #toggler:checked ~ .menu .menu-content {
+    transform: scaleY(1);
+  }  
 
   .list {
     flex-direction: column;
@@ -1042,10 +1060,6 @@ footer {
     display: inline-flex;
     align-items: center;
     cursor: pointer;
-  }
-
-  #toggler:checked~.menu {
-    transform: scaleY(1);
   }
 
   #toggler:checked~label .line:nth-child(1) {
